--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack-dev-server --open --mode development --hot"
+    "dev": "webpack-dev-server --open --mode development"
   },
   "keywords": [
     "javascript"
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
