--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   edge: true
   skip-cleaneup: true
   keep-history: true
-  github-token: GITHUB_TOKEN
+  github-token: $GITHUB_TOKEN
   local-dir: dist/
   target-branch: gh-pages
   commit_message: 'Deplay release'
